# RAG-Enterprise

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  BUG_FIXES.md  CHANGELOG.md  LICENSE  PERFORMANCE_REPORT.md  RC3.1_FALSE_ABSTAIN_REPORT.md  RC3.2_RETRIEVAL_RANKING_REPORT.md  RC3.3_PDF_EXTRACTION_REPORT.md  RC3.4_GENERATION_REPORT.md  RC3.5_HYBRID_RETRIEVAL_REPORT.md  RC3.6_EVIDENCE_SELECTION_REPORT.md  RC3.7_VALIDATION_REPORT.md  README.md  README_UPDATE_REPORT.md  REGRESSION_MATRIX.md  REGRESSION_TEST_REPORT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_CLEANUP_REPORT.md  REPOSITORY_TREE.txt  ROADMAP.md  VERSION_1_RELEASE_REPORT.md  docker-compose.yml  run.py
backend/: README.md  pyproject.toml
backend/.tmp-rc37-uploads/.lexical/: 019f8ecc-6877-70cc-80e0-25cf646bc9e1_018f0000-0000-7000-8000-00000000b6e3.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_knowledge.py  002_embeddings_indexing.py  003_conversation_messages.py
backend/src/rag_enterprise/: __init__.py  lifespan.py  main.py
backend/tests/: conftest.py
backend/tests/application/: test_command_registration.py  test_dispatcher.py  test_dto.py  test_result.py
backend/tests/chunking/: test_splitter.py
backend/tests/core/: test_config_validation.py
backend/tests/db/: conftest.py  support.py  test_mixins.py  test_repository.py  test_result_utils.py  test_session.py  test_unit_of_work.py
backend/tests/e2e/: __init__.py  test_golden_normalization_alignment.py  test_rag_happy_path.py
backend/tests/evaluation/: test_evaluation.py
backend/tests/generation/: __init__.py  test_api.py  test_citations.py  test_service.py  (+5 more)
backend/tools/: __init__.py  pdf_extraction_diagnostics.py  rc33_golestan_eval.py  rc34_generation_eval.py  rc35_hybrid_eval.py  rc36_evidence_eval.py  rc37_api_smoke.py
(+488 files in other folders)
